build: add code quality tools and CI improvements
- Configure Detekt for Kotlin static analysis
- Add Spotless for automatic code formatting
- Set up Kover for code coverage reporting
- Configure EditorConfig for consistent formatting
- Update CI workflow with quality checks

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -54,8 +54,14 @@ jobs:
       - name: Compile Kotlin
         run: ./gradlew compileKotlin compileTestKotlin --stacktrace
 
+      - name: Run Quality Checks
+        run: ./gradlew lint --stacktrace
+
       - name: Run Tests
         run: ./gradlew test --stacktrace
+
+      - name: Run Code Coverage
+        run: ./gradlew koverHtmlReport --stacktrace
 
       - name: Generate Test Report
         uses: dorny/test-reporter@v1
