--- a/detekt.yml
+++ b/detekt.yml
@@ -1,11 +1,10 @@
+---
 build:
   maxIssues: 100
   excludeCorrectable: false
-
 config:
   validation: true
   warningsAsErrors: false
-
 complexity:
   active: true
   CyclomaticComplexMethod:
@@ -25,49 +24,48 @@ complexity:
     threshold: 600
   TooManyFunctions:
     active: true
-    excludes: ['**/dsl/**', '**/test/**']  # DSL builders and test classes naturally have many methods
+    excludes:
+    - "**/dsl/**"
+    - "**/test/**"
     thresholdInFiles: 11
     thresholdInClasses: 11
     thresholdInInterfaces: 11
     thresholdInObjects: 11
     thresholdInEnums: 5
-
 coroutines:
   active: true
   SleepInsteadOfDelay:
     active: true
-
 empty-blocks:
   active: true
   EmptyCatchBlock:
     active: true
-    allowedExceptionNameRegex: '_|(ignore|expected).*'
+    allowedExceptionNameRegex: "_|(ignore|expected).*"
   EmptyFunctionBlock:
     active: true
-
 exceptions:
   active: true
   TooGenericExceptionCaught:
     active: true
-    excludes: ['**/test/**']
+    excludes:
+    - "**/test/**"
     exceptionNames:
-      - ArrayIndexOutOfBoundsException
-      - Error
-      - Exception
-      - IllegalMonitorStateException
-      - NullPointerException
-      - IndexOutOfBoundsException
-      - RuntimeException
-      - Throwable
+    - "ArrayIndexOutOfBoundsException"
+    - "Error"
+    - "Exception"
+    - "IllegalMonitorStateException"
+    - "NullPointerException"
+    - "IndexOutOfBoundsException"
+    - "RuntimeException"
+    - "Throwable"
   SwallowedException:
     active: true
     ignoredExceptionTypes:
-      - InterruptedException
-      - NumberFormatException
-      - ParseException
-      - MalformedURLException
-    allowedExceptionNameRegex: '_|(ignore|expected).*'
-
+    - "InterruptedException"
+    - "NumberFormatException"
+    - "ParseException"
+    - "MalformedURLException"
+    allowedExceptionNameRegex: "_|(ignore|expected).*"
 formatting:
   active: true
   android: false
@@ -81,32 +79,32 @@ formatting:
   MaximumLineLength:
     active: true
     maxLineLength: 120
-
 naming:
   active: true
   ClassNaming:
     active: true
-    classPattern: '[A-Z][a-zA-Z0-9]*'
+    classPattern: "[A-Z][a-zA-Z0-9]*"
   FunctionNaming:
     active: true
-    excludes: ['**/test/**']
-    functionPattern: '^([a-z][a-zA-Z0-9]*)|(`.*`)$'
+    excludes:
+    - "**/test/**"
+    functionPattern: "^([a-z][a-zA-Z0-9]*)|(`.*`)$"
   PackageNaming:
     active: true
-    packagePattern: '[a-z]+(\.[a-z][A-Za-z0-9]*)*'
+    packagePattern: "[a-z]+(\\.[a-z][A-Za-z0-9]*)*"
   VariableNaming:
     active: true
-    variablePattern: '[a-z][A-Za-z0-9]*'
-
+    variablePattern: "[a-z][A-Za-z0-9]*"
 performance:
   active: true
   ForEachOnRange:
     active: true
-    excludes: ['**/test/**']
+    excludes:
+    - "**/test/**"
   SpreadOperator:
     active: true
-    excludes: ['**/test/**']
-
+    excludes:
+    - "**/test/**"
 potential-bugs:
   active: true
   EqualsAlwaysReturnsTrueOrFalse:
@@ -125,12 +123,15 @@ potential-bugs:
     active: true
   UnsafeCast:
     active: true
-
 style:
   active: true
   ForbiddenComment:
     active: true
-    comments: ['TODO:', 'FIXME:', 'STOPSHIP:', 'XXX:']
+    comments:
+    - "TODO:"
+    - "FIXME:"
+    - "STOPSHIP:"
+    - "XXX:"
   MaxLineLength:
     active: true
     maxLineLength: 120
@@ -138,8 +139,13 @@ style:
     excludeImportStatements: true
   MagicNumber:
     active: true
-    excludes: ['**/test/**']
-    ignoreNumbers: ['-1', '0', '1', '2']
+    excludes:
+    - "**/test/**"
+    ignoreNumbers:
+    - "-1"
+    - "0"
+    - "1"
+    - "2"
     ignoreHashCodeFunction: true
     ignorePropertyDeclaration: false
     ignoreLocalVariableDeclaration: false
@@ -153,7 +159,8 @@ style:
   ReturnCount:
     active: true
     max: 2
-    excludedFunctions: ['equals']
+    excludedFunctions:
+    - "equals"
     excludeLabeled: false
     excludeReturnFromLambda: true
     excludeGuardClauses: false
@@ -161,7 +168,7 @@ style:
     active: true
   UnusedParameter:
     active: true
-    allowedNames: 'ignored|_'
+    allowedNames: "ignored|_"
   UnusedPrivateClass:
     active: true
   UnusedPrivateMember:
@@ -174,4 +181,5 @@ style:
     active: true
   WildcardImport:
     active: true
-    excludes: ['**/test/**']
+    excludes:
+    - "**/test/**"
