--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,132 +1,113 @@
-name: CI
-
-on:
+---
+name: "CI"
+"on":
   push:
-    branches: [ main, master ]
+    branches:
+    - "main"
+    - "master"
   pull_request:
-    branches: [ main, master ]
-  workflow_dispatch:
-
-# Cancel in-progress runs for the same branch/PR, except on main/master
+    branches:
+    - "main"
+    - "master"
+  workflow_dispatch: null
 concurrency:
-  group: ${{ github.workflow }}-${{ github.ref }}
-  cancel-in-progress: ${{ github.ref != 'refs/heads/main' && github.ref != 'refs/heads/master' }}
-
+  group: "${{ github.workflow }}-${{ github.ref }}"
+  cancel-in-progress: "${{ github.ref != 'refs/heads/main' && github.ref != 'refs/heads/master'\
+    \ }}"
 jobs:
   build:
-    name: Build and Test
-    runs-on: ${{ matrix.os }}
-
+    name: "Build and Test"
+    runs-on: "${{ matrix.os }}"
     permissions:
-      checks: write
-      contents: read
-
+      checks: "write"
+      contents: "read"
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-latest, macos-latest]
-        java: [17, 21]
+        os:
+        - "ubuntu-latest"
+        - "macos-latest"
+        java:
+        - 17
+        - 21
         exclude:
-          # Reduce matrix size - only test Java 21 on Ubuntu
-          - os: macos-latest
-            java: 21
-
+        - os: "macos-latest"
+          java: 21
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-
-      - name: Set up JDK ${{ matrix.java }}
-        uses: actions/setup-java@v4
-        with:
-          distribution: 'temurin'
-          java-version: ${{ matrix.java }}
-
-      - name: Setup Gradle
-        uses: gradle/actions/setup-gradle@v3
-        with:
-          cache-read-only: ${{ github.ref != 'refs/heads/main' && github.ref != 'refs/heads/master' }}
-
-      - name: Validate Gradle Wrapper
-        run: ./gradlew --version
-
-      - name: Compile Kotlin
-        run: ./gradlew compileKotlin compileTestKotlin --stacktrace
-
-      - name: Run Tests
-        run: ./gradlew test --stacktrace
-
-      - name: Generate Test Report
-        uses: dorny/test-reporter@v1
-        if: success() || failure()
-        with:
-          name: Test Results (${{ matrix.os }} - Java ${{ matrix.java }})
-          path: build/test-results/test/*.xml
-          reporter: java-junit
-
-      - name: Build Shadow JAR
-        run: ./gradlew shadowJar --stacktrace
-
-      - name: Verify JAR
-        run: |
-          echo "Testing JAR with --help flag..."
-          java -jar build/libs/groovy-lsp-*-SNAPSHOT.jar --help
-
-      - name: Upload JAR artifact
-        if: matrix.os == 'ubuntu-latest' && matrix.java == 17
-        uses: actions/upload-artifact@v4
-        with:
-          name: groovy-lsp-jar
-          path: build/libs/groovy-lsp-*-SNAPSHOT.jar
-          retention-days: 7
-
-      - name: Upload Test Results
-        if: always()
-        uses: actions/upload-artifact@v4
-        with:
-          name: test-results-${{ matrix.os }}-java${{ matrix.java }}
-          path: |
-            build/test-results/
-            build/reports/tests/
-          retention-days: 7
-
-  # Quick validation job that must pass for PRs
+    - name: "Checkout code"
+      uses: "actions/checkout@v4"
+      with:
+        fetch-depth: 0
+    - name: "Set up JDK ${{ matrix.java }}"
+      uses: "actions/setup-java@v4"
+      with:
+        distribution: "temurin"
+        java-version: "${{ matrix.java }}"
+    - name: "Setup Gradle"
+      uses: "gradle/actions/setup-gradle@v3"
+      with:
+        cache-read-only: "${{ github.ref != 'refs/heads/main' && github.ref != 'refs/heads/master'\
+          \ }}"
+    - name: "Validate Gradle Wrapper"
+      run: "./gradlew --version"
+    - name: "Compile Kotlin"
+      run: "./gradlew compileKotlin compileTestKotlin --stacktrace"
+    - name: "Run Quality Checks"
+      run: "./gradlew lint --stacktrace"
+    - name: "Run Tests"
+      run: "./gradlew test --stacktrace"
+    - name: "Run Code Coverage"
+      run: "./gradlew koverHtmlReport --stacktrace"
+    - name: "Generate Test Report"
+      uses: "dorny/test-reporter@v1"
+      if: "success() || failure()"
+      with:
+        name: "Test Results (${{ matrix.os }} - Java ${{ matrix.java }})"
+        path: "build/test-results/test/*.xml"
+        reporter: "java-junit"
+    - name: "Build Shadow JAR"
+      run: "./gradlew shadowJar --stacktrace"
+    - name: "Verify JAR"
+      run: "echo \"Testing JAR with --help flag...\"\njava -jar build/libs/groovy-lsp-*-SNAPSHOT.jar\
+        \ --help\n"
+    - name: "Upload JAR artifact"
+      if: "matrix.os == 'ubuntu-latest' && matrix.java == 17"
+      uses: "actions/upload-artifact@v4"
+      with:
+        name: "groovy-lsp-jar"
+        path: "build/libs/groovy-lsp-*-SNAPSHOT.jar"
+        retention-days: 7
+    - name: "Upload Test Results"
+      if: "always()"
+      uses: "actions/upload-artifact@v4"
+      with:
+        name: "test-results-${{ matrix.os }}-java${{ matrix.java }}"
+        path: "build/test-results/\nbuild/reports/tests/\n"
+        retention-days: 7
   validate:
-    name: Validation Check
-    runs-on: ubuntu-latest
-    needs: build
-    if: always()
-
+    name: "Validation Check"
+    runs-on: "ubuntu-latest"
+    needs: "build"
+    if: "always()"
     steps:
-      - name: Check build status
-        run: |
-          if [[ "${{ needs.build.result }}" != "success" ]]; then
-            echo "Build failed or was cancelled"
-            exit 1
-          fi
-          echo "✅ All checks passed!"
-
-  # Optional: Check for dependency updates (runs only on main)
+    - name: "Check build status"
+      run: "if [[ \"${{ needs.build.result }}\" != \"success\" ]]; then\n  echo \"\
+        Build failed or was cancelled\"\n  exit 1\nfi\necho \"✅ All checks passed!\"\
+        \n"
   dependency-check:
-    name: Check Dependencies
-    runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/master'
-
+    name: "Check Dependencies"
+    runs-on: "ubuntu-latest"
+    if: "github.ref == 'refs/heads/main' || github.ref == 'refs/heads/master'"
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Set up JDK 17
-        uses: actions/setup-java@v4
-        with:
-          distribution: 'temurin'
-          java-version: 17
-
-      - name: Setup Gradle
-        uses: gradle/actions/setup-gradle@v3
-
-      - name: Check for dependency updates
-        run: |
-          ./gradlew dependencyUpdates --refresh-dependencies || true
-        continue-on-error: true
+    - name: "Checkout code"
+      uses: "actions/checkout@v4"
+    - name: "Set up JDK 17"
+      uses: "actions/setup-java@v4"
+      with:
+        distribution: "temurin"
+        java-version: 17
+    - name: "Setup Gradle"
+      uses: "gradle/actions/setup-gradle@v3"
+    - name: "Check for dependency updates"
+      run: "./gradlew dependencyUpdates --refresh-dependencies || true\n"
+      continue-on-error: true
