ci: optimize matrix strategy to reduce PR costs
- PRs now run only ubuntu-latest + Java 17 (1 job)
- Main branch still runs full matrix coverage (3 jobs)
- ~67% reduction in CI minutes for pull requests

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,12 +24,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os:
-        - "ubuntu-latest"
-        - "macos-latest"
-        java:
-        - 17
-        - 21
+        os: ${{ fromJSON(github.event_name == 'pull_request' && '["ubuntu-latest"]' || '["ubuntu-latest", "macos-latest"]') }}
+        java: ${{ fromJSON(github.event_name == 'pull_request' && '[17]' || '[17, 21]') }}
         exclude:
         - os: "macos-latest"
           java: 21
