--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,8 +24,10 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: ${{ fromJSON(github.event_name == 'pull_request' && '["ubuntu-latest"]' || '["ubuntu-latest", "macos-latest"]') }}
-        java: ${{ fromJSON(github.event_name == 'pull_request' && '[17]' || '[17, 21]') }}
+        os: "${{ fromJSON(github.event_name == 'pull_request' && '[\"ubuntu-latest\"\
+          ]' || '[\"ubuntu-latest\", \"macos-latest\"]') }}"
+        java: "${{ fromJSON(github.event_name == 'pull_request' && '[17]' || '[17,\
+          \ 21]') }}"
         exclude:
         - os: "macos-latest"
           java: 21
