refactor: address PR feedback with targeted suppression approach
- Use targeted @Suppress("LoopWithTooManyJumpStatements") instead of global disable
- Keep ReturnCount max: 3 as excludeGuardClauses didn't work for early returns
- Maintains code quality rules globally while allowing specific justified exceptions

Addresses feedback from @gemini-code-assist about using more precise
suppression rather than blanket rule disabling.

--- a/detekt.yml
+++ b/detekt.yml
@@ -133,7 +133,7 @@ style:
     - "STOPSHIP:"
     - "XXX:"
   LoopWithTooManyJumpStatements:
-    active: false
+    active: true
   MaxLineLength:
     active: true
     maxLineLength: 120
