--- a/detekt.yml
+++ b/detekt.yml
@@ -132,6 +132,8 @@ style:
     comments:
     - "STOPSHIP:"
     - "XXX:"
+  LoopWithTooManyJumpStatements:
+    active: true
   MaxLineLength:
     active: true
     maxLineLength: 120
@@ -158,12 +160,12 @@ style:
     ignoreExtensionFunctions: true
   ReturnCount:
     active: true
-    max: 2
+    max: 3
     excludedFunctions:
     - "equals"
     excludeLabeled: false
     excludeReturnFromLambda: true
-    excludeGuardClauses: false
+    excludeGuardClauses: true
   UnusedImports:
     active: true
   UnusedParameter:
