--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -55,7 +55,7 @@ jobs:
     - name: "Run Tests"
       run: "./gradlew test --stacktrace"
     - name: "Run Code Coverage"
-      run: "./gradlew koverHtmlReport --stacktrace"
+      run: "./gradlew koverHtmlReport koverXmlReport --stacktrace"
     - name: "Generate Test Report"
       uses: "dorny/test-reporter@v2"
       if: "success() || failure()"
