fix: split long lines to meet 120 character limit
- Split long logger.debug statements with string concatenation
- Break down complex parameter constructions into multiple lines
- Fix long lines in HoverProvider, SignatureHelpProvider, GroovyLanguageServer
- Fix long lines in EnhancedCodeActionProvider and DebugRenameTest

Fixes 7 detekt MaxLineLength violations

--- a/detekt.yml
+++ b/detekt.yml
@@ -75,12 +75,36 @@ formatting:
   NoWildcardImports:
     active: true
     autoCorrect: true
+  NoUnusedImports:
+    active: true
+    autoCorrect: true
   FinalNewline:
     active: true
     autoCorrect: true
   MaximumLineLength:
     active: true
     maxLineLength: 120
+  NoTrailingSpaces:
+    active: true
+    autoCorrect: true
+  NoSemicolons:
+    active: true
+    autoCorrect: true
+  ImportOrdering:
+    active: true
+    autoCorrect: true
+  ModifierOrdering:
+    active: true
+    autoCorrect: true
+  NoConsecutiveBlankLines:
+    active: true
+    autoCorrect: true
+  SpacingBetweenPackageAndImports:
+    active: true
+    autoCorrect: true
+  ArgumentListWrapping:
+    active: true
+    autoCorrect: true
 naming:
   active: true
   ClassNaming:
