--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,11 +9,17 @@ name: "CI"
     branches:
     - "main"
     - "master"
-  workflow_dispatch: null
+  workflow_dispatch:
+    inputs:
+      disable_scan:
+        description: "Disable Gradle build scan"
+        required: false
+        type: "boolean"
+        default: false
 concurrency:
-  group: "${{ github.workflow }}-${{ github.ref }}"
+  group: "${{ github.workflow }}${{ github.ref }}"
   cancel-in-progress: "${{ github.ref != 'refs/heads/main' && github.ref != 'refs/heads/master'\
-    \ }}"
+    \    }}"
 jobs:
   build:
     name: "Build and Test"
@@ -45,26 +51,31 @@ jobs:
       uses: "gradle/actions/setup-gradle@v5"
       with:
         cache-read-only: "${{ github.ref != 'refs/heads/main' && github.ref != 'refs/heads/master'\
-          \ }}"
+          \          }}"
+    - name: "Set Gradle scan flag"
+      shell: "bash"
+      run: "if [[ \"${{ github.event.inputs.disable_scan }}\" == \"true\" ]]; then\n\
+        \  echo \"GRADLE_SCAN_FLAG=-Dorg.gradle.scan=false\" >> $GITHUB_ENV\nelse\n\
+        \  echo \"GRADLE_SCAN_FLAG=\" >> $GITHUB_ENV\nfi\n"
     - name: "Validate Gradle Wrapper"
       run: "./gradlew --version"
     - name: "Compile Kotlin"
-      run: "./gradlew compileKotlin compileTestKotlin --stacktrace"
+      run: "./gradlew compileKotlin compileTestKotlin --stacktrace $GRADLE_SCAN_FLAG"
     - name: "Run Quality Checks"
-      run: "./gradlew lint --stacktrace"
+      run: "./gradlew lint --stacktrace $GRADLE_SCAN_FLAG"
     - name: "Run Tests"
-      run: "./gradlew test --stacktrace"
+      run: "./gradlew test --stacktrace $GRADLE_SCAN_FLAG"
     - name: "Run Code Coverage"
-      run: "./gradlew koverHtmlReport koverXmlReport --stacktrace"
+      run: "./gradlew koverHtmlReport koverXmlReport --stacktrace $GRADLE_SCAN_FLAG"
     - name: "SonarCloud Analysis"
       if: "matrix.os == 'ubuntu-latest' && matrix.java == 17 &&\n((github.event_name\
-        \ == 'push' && github.ref == 'refs/heads/main') ||\n (github.event_name ==\
-        \ 'pull_request' &&\n  github.event.pull_request.base.ref == 'main' &&\n \
-        \ github.event.pull_request.head.repo.full_name == github.repository))\n"
+        \        == 'push' && github.ref == 'refs/heads/main') ||\n (github.event_name\
+        \ ==        'pull_request' &&\n  github.event.pull_request.base.ref == 'main'\
+        \ &&\n         github.event.pull_request.head.repo.full_name == github.repository))\n"
       env:
         GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
         SONAR_TOKEN: "${{ secrets.SONAR_TOKEN }}"
-      run: "./gradlew sonar --info"
+      run: "./gradlew sonar --info $GRADLE_SCAN_FLAG"
     - name: "Generate Test Report"
       uses: "dorny/test-reporter@v2"
       if: "success() || failure()"
@@ -73,10 +84,10 @@ jobs:
         path: "build/test-results/test/*.xml"
         reporter: "java-junit"
     - name: "Build Shadow JAR"
-      run: "./gradlew shadowJar --stacktrace"
+      run: "./gradlew shadowJar --stacktrace $GRADLE_SCAN_FLAG"
     - name: "Verify JAR"
       run: "echo \"Testing JAR with --help flag...\"\njava -jar build/libs/groovy-lsp-*-SNAPSHOT.jar\
-        \ --help\n"
+        \        --help\n"
     - name: "Upload JAR artifact"
       if: "matrix.os == 'ubuntu-latest' && matrix.java == 17"
       uses: "actions/upload-artifact@v4"
@@ -99,8 +110,8 @@ jobs:
     steps:
     - name: "Check build status"
       run: "if [[ \"${{ needs.build.result }}\" != \"success\" ]]; then\n  echo \"\
-        Build failed or was cancelled\"\n  exit 1\nfi\necho \"✅ All checks passed!\"\
-        \n"
+        \        Build failed or was cancelled\"\n  exit 1\nfi\necho \"✅ All checks\
+        \ passed!\"        \n"
   dependency-check:
     name: "Check Dependencies"
     runs-on: "ubuntu-latest"
