feat(ci): Add lefthook for YAML formatting and improve CI readability
This commit introduces `lefthook` to format YAML files using `yq` on pre-commit. This ensures consistent formatting for YAML files without relying on `spotless`.

It also improves the readability of the CI workflow files by using YAML block scalars for multiline strings.

Changes:
- `lefthook.yml`: Added configuration for `lefthook` to format YAML files using `yq`.
- `build.gradle.kts`: Removed the `yaml` configuration from `spotless`.
- `.github/workflows/*.yml`: Improved readability using block scalars.

--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -1,19 +1,18 @@
----
-name: "Release Please"
+name: Release Please
 "on":
   push:
     branches:
-    - "main"
+    - main
   workflow_dispatch: null
 permissions:
-  contents: "write"
-  pull-requests: "write"
+  contents: write
+  pull-requests: write
 jobs:
   release-please:
-    runs-on: "ubuntu-latest"
+    runs-on: ubuntu-latest
     steps:
-    - uses: "googleapis/release-please-action@c2a5a2bd6a758a0937f1ddb1e8950609867ed15c"
+    - uses: googleapis/release-please-action@c2a5a2bd6a758a0937f1ddb1e8950609867ed15c
       with:
         token: "${{ secrets.RELEASE_PLEASE_TOKEN }}"
-        config-file: "release-please-config.json"
-        manifest-file: ".release-please-manifest.json"
+        config-file: release-please-config.json
+        manifest-file: .release-please-manifest.json
