build: enable Gradle configuration cache

--- a/gradle.properties
+++ b/gradle.properties
@@ -2,6 +2,8 @@
 org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8
 org.gradle.parallel=true
 org.gradle.caching=true
+org.gradle.configuration-cache=true
+org.gradle.configuration-cache.problems=warn
 # Due to a deprecation warning in io.gitlab.arturbosch.detekt.DetektPlugin.apply(DetektPlugin.kt:28)
 # which we have no control over, we are setting the warning mode to none.
 org.gradle.warning.mode=none
