fix: show method details for hover calls

--- a/tests/e2e/resources/scenarios/hover-println.yaml
+++ b/tests/e2e/resources/scenarios/hover-println.yaml
@@ -24,11 +24,11 @@ steps:
   - assert:
       source: hoverResult
       checks:
-        - jsonPath: $.contents.value
+        - jsonPath: $.contents.right.value
           expect:
             type: CONTAINS
             value: "Method"
-        - jsonPath: $.contents.value
+        - jsonPath: $.contents.right.value
           expect:
             type: CONTAINS
             value: "println("
