feat: add signature help support

--- a/tests/e2e/resources/scenarios/gradle-hover-deps.yaml
+++ b/tests/e2e/resources/scenarios/gradle-hover-deps.yaml
@@ -44,6 +44,7 @@ steps:
   - waitNotification:
       method: textDocument/publishDiagnostics
       saveAs: initialDiagnostics
+      timeoutMs: 15000
       checks:
         - jsonPath: $.uri
           expect:
@@ -62,6 +63,7 @@ steps:
   - waitNotification:
       method: textDocument/publishDiagnostics
       saveAs: resolvedDiagnostics
+      timeoutMs: 15000
       checks:
         - jsonPath: $.uri
           expect:
