ci: include gradle build problems report in artifacts

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -99,6 +99,7 @@ jobs:
           path: |-
             **/build/test-results/
             **/build/reports/tests/
+            **/build/reports/problems/
           retention-days: 7
   validate:
     name: Validation Check
