--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -100,6 +100,7 @@ jobs:
             **/build/test-results/
             **/build/reports/tests/
             **/build/reports/problems/
+            **/build/reports/kover/
           retention-days: 7
   validate:
     name: Validation Check
