--- a/lefthook.yml
+++ b/lefthook.yml
@@ -3,3 +3,7 @@ pre-commit:
     yaml-format:
       glob: "*.{yml,yaml}"
       run: yq -i -P '.' {staged_files}
+    python-format:
+      glob: "*.py"
+      run: ruff format {staged_files} && ruff check --fix {staged_files}
+      # TODO: Add explicit dependency check for ruff in the future
