fix: manually install starship to avoid dependency resolution issues

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -25,7 +25,8 @@
 			"upgradePackages": "false"
 		},
 		"ghcr.io/devcontainers/features/github-cli:1": {},
-		"ghcr.io/devcontainers-contrib/features/starship:1": {}
+		// Installing Starship manually in post-create.sh to avoid dependency issues with devcontainers-contrib feature
+		// "ghcr.io/devcontainers-contrib/features/starship:1": {} 
 	},
 	"customizations": {
 		"vscode": {
